include/El/lapack_like/factor.h

/* LDL factorization
   ================= */

typedef enum
{
  EL_BUNCH_KAUFMAN_A,
  EL_BUNCH_KAUFMAN_C,
  EL_BUNCH_KAUFMAN_D,
  EL_BUNCH_KAUFMAN_BOUNDED,
  EL_BUNCH_PARLETT,
  LDL_WITHOUT_PIVOTING
  /* TODO: Diagonal pivoting? */
} ElLDLPivotType;
/* Packed LDL factorization (without pivoting) 
   ------------------------------------------- */
EL_EXPORT ElError ElLDL_s( ElMatrix_s A );
EL_EXPORT ElError ElLDL_d( ElMatrix_d A );
EL_EXPORT ElError ElLDL_c( ElMatrix_c A, bool conjugate );
EL_EXPORT ElError ElLDL_z( ElMatrix_z A, bool conjugate );
EL_EXPORT ElError ElLDLDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElLDLDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElLDLDist_c( ElDistMatrix_c A, bool conjugate );
EL_EXPORT ElError ElLDLDist_z( ElDistMatrix_z A, bool conjugate );
/* Packed LDL factorization (with pivoting)
   ---------------------------------------- */
EL_EXPORT ElError ElLDLPiv_s
( ElMatrix_s A, ElMatrix_s dSub, ElPermutation p );
EL_EXPORT ElError ElLDLPiv_d
( ElMatrix_d A, ElMatrix_d dSub, ElPermutation p );
EL_EXPORT ElError ElLDLPiv_c
( ElMatrix_c A, ElMatrix_c dSub, ElPermutation p, bool conjugate );
EL_EXPORT ElError ElLDLPiv_z
( ElMatrix_z A, ElMatrix_z dSub, ElPermutation p, bool conjugate );
EL_EXPORT ElError ElLDLPivDist_s
( ElDistMatrix_s A, ElDistMatrix_s dSub, ElDistPermutation p );
EL_EXPORT ElError ElLDLPivDist_d
( ElDistMatrix_d A, ElDistMatrix_d dSub, ElDistPermutation p );
EL_EXPORT ElError ElLDLPivDist_c
( ElDistMatrix_c A, ElDistMatrix_c dSub, ElDistPermutation p, bool conjugate );
EL_EXPORT ElError ElLDLPivDist_z
( ElDistMatrix_z A, ElDistMatrix_z dSub, ElDistPermutation p, bool conjugate );
/* Return the inertia given the quasi-diagonal factor from an LDL^H 
   ---------------------------------------------------------------- */
EL_EXPORT ElError ElInertiaAfterLDL_s
( ElConstMatrix_s d, ElConstMatrix_s dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDL_d
( ElConstMatrix_d d, ElConstMatrix_d dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDL_c
( ElConstMatrix_s d, ElConstMatrix_c dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDL_z
( ElConstMatrix_d d, ElConstMatrix_z dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDLDist_s
( ElConstDistMatrix_s d, ElConstDistMatrix_s dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDLDist_d
( ElConstDistMatrix_d d, ElConstDistMatrix_d dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDLDist_c
( ElConstDistMatrix_s d, ElConstDistMatrix_c dSub, ElInertiaType* inertia );
EL_EXPORT ElError ElInertiaAfterLDLDist_z
( ElConstDistMatrix_d d, ElConstDistMatrix_z dSub, ElInertiaType* inertia );
/* Solve linear systems with an unpivoted LDL factorization
   -------------------------------------------------------- */
EL_EXPORT ElError ElSolveAfterLDL_s
( ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterLDL_d
( ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterLDL_c
( ElConstMatrix_c A, ElMatrix_c B, bool conjugate );
EL_EXPORT ElError ElSolveAfterLDL_z
( ElConstMatrix_z A, ElMatrix_z B, bool conjugate );
EL_EXPORT ElError ElSolveAfterLDLDist_s
( ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterLDLDist_d
( ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterLDLDist_c
( ElConstDistMatrix_c A, ElDistMatrix_c B, bool conjugate );
EL_EXPORT ElError ElSolveAfterLDLDist_z
( ElConstDistMatrix_z A, ElDistMatrix_z B, bool conjugate );
/* Solve linear systems with a pivoted LDL factorization
   ----------------------------------------------------- */
EL_EXPORT ElError ElSolveAfterLDLPiv_s
( ElConstMatrix_s A,
  ElConstMatrix_s dSub,
  ElConstPermutation p,
  ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterLDLPiv_d
( ElConstMatrix_d A,
  ElConstMatrix_d dSub,
  ElConstPermutation p,
  ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterLDLPiv_c
( ElConstMatrix_c A,
  ElConstMatrix_c dSub,
  ElConstPermutation p,
  ElMatrix_c B, 
  bool conjugate );
EL_EXPORT ElError ElSolveAfterLDLPiv_z
( ElConstMatrix_z A,
  ElConstMatrix_z dSub,
  ElConstPermutation p,
  ElMatrix_z B, 
  bool conjugate );
EL_EXPORT ElError ElSolveAfterLDLPivDist_s
( ElConstDistMatrix_s A,
  ElConstDistMatrix_s dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterLDLPivDist_d
( ElConstDistMatrix_d A,
  ElConstDistMatrix_d dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterLDLPivDist_c
( ElConstDistMatrix_c A,
  ElConstDistMatrix_c dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_c B,
  bool conjugate );
EL_EXPORT ElError ElSolveAfterLDLPivDist_z
( ElConstDistMatrix_z A,
  ElConstDistMatrix_z dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_z B,
  bool conjugate );
/* Multiply vectors after an unpivoted LDL factorization
   ----------------------------------------------------- */
EL_EXPORT ElError ElMultiplyAfterLDL_s
( ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElMultiplyAfterLDL_d
( ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElMultiplyAfterLDL_c
( ElConstMatrix_c A, ElMatrix_c B, bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDL_z
( ElConstMatrix_z A, ElMatrix_z B, bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDLDist_s
( ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElMultiplyAfterLDLDist_d
( ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElMultiplyAfterLDLDist_c
( ElConstDistMatrix_c A, ElDistMatrix_c B, bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDLDist_z
( ElConstDistMatrix_z A, ElDistMatrix_z B, bool conjugate );