include/El/lapack_like/factor.py


lib.ElLDL_s.argtypes = [c_void_p]
lib.ElLDL_s.restype = c_uint
lib.ElLDL_d.argtypes = [c_void_p]
lib.ElLDL_d.restype = c_uint
lib.ElLDL_c.argtypes = [c_void_p,bType]
lib.ElLDL_c.restype = c_uint
lib.ElLDL_z.argtypes = [c_void_p,bType]
lib.ElLDL_z.restype = c_uint
lib.ElLDLDist_s.argtypes = [c_void_p]
lib.ElLDLDist_s.restype = c_uint
lib.ElLDLDist_d.argtypes = [c_void_p]
lib.ElLDLDist_d.restype = c_uint
lib.ElLDLDist_c.argtypes = [c_void_p,bType]
lib.ElLDLDist_c.restype = c_uint
lib.ElLDLDist_z.argtypes = [c_void_p,bType]
lib.ElLDLDist_z.restype = c_uint
lib.ElLDLPiv_s.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElLDLPiv_s.restype = c_uint
lib.ElLDLPiv_d.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElLDLPiv_d.restype = c_uint
lib.ElLDLPiv_c.argtypes = [c_void_p,c_void_p,c_void_p,bType,c_uint]
lib.ElLDLPiv_c.restype = c_uint
lib.ElLDLPiv_z.argtypes = [c_void_p,c_void_p,c_void_p,bType,c_uint]
lib.ElLDLPiv_z.restype = c_uint
lib.ElLDLPivDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElLDLPivDist_s.restype = c_uint
lib.ElLDLPivDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElLDLPivDist_d.restype = c_uint
lib.ElLDLPivDist_c.argtypes = [c_void_p,c_void_p,c_void_p,bType,c_uint]
lib.ElLDLPivDist_c.restype = c_uint
lib.ElLDLPivDist_z.argtypes = [c_void_p,c_void_p,c_void_p,bType,c_uint]
lib.ElLDLPivDist_z.restype = c_uint

def LDL(A,conjugate=True,pivType=BUNCH_KAUFMAN_A):
  if type(A) is Matrix:
    if pivType == LDL_WITHOUT_PIVOTING:
      if   A.tag == sTag: lib.ElLDL_s(A.obj)
      elif A.tag == dTag: lib.ElLDL_d(A.obj)
      elif A.tag == cTag: lib.ElLDL_c(A.obj,conjugate)
      elif A.tag == zTag: lib.ElLDL_z(A.obj,conjugate)
      else: raise Exception('Unsupported datatype')
    else:
      dSub = Matrix(A.tag)
      p = Matrix(iTag)
      if   A.tag == sTag: lib.ElLDLPiv_s(A.obj,dSub.obj,p.obj,pivType)
      elif A.tag == dTag: lib.ElLDLPiv_d(A.obj,dSub.obj,p.obj,pivType)
      elif A.tag == cTag: lib.ElLDLPiv_c(A.obj,dSub.obj,p.obj,conjugate,pivType)
      elif A.tag == zTag: lib.ElLDLPiv_z(A.obj,dSub.obj,p.obj,conjugate,pivType)
      else: raise Exception('Unsupported datatype')
      return dSub, p
  elif type(A) is DistMatrix:
    if pivType == LDL_WITHOUT_PIVOTING:
      if   A.tag == sTag: lib.ElLDLDist_s(A.obj)
      elif A.tag == dTag: lib.ElLDLDist_d(A.obj)
      elif A.tag == cTag: lib.ElLDLDist_c(A.obj,conjugate)
      elif A.tag == zTag: lib.ElLDLDist_z(A.obj,conjugate)
      else: raise Exception('Unsupported datatype')
    else:
      dSub = DistMatrix(A.tag,VC,STAR,A.Grid())
      p = DistMatrix(iTag,VC,STAR,A.Grid())
      if   A.tag == sTag: 
        lib.ElLDLPivDist_s(A.obj,dSub.obj,p.obj,pivType)
      elif A.tag == dTag: 
        lib.ElLDLPivDist_d(A.obj,dSub.obj,p.obj,pivType)
      elif A.tag == cTag: 
        lib.ElLDLPivDist_c(A.obj,dSub.obj,p.obj,conjugate,pivType)
      elif A.tag == zTag: 
        lib.ElLDLPivDist_z(A.obj,dSub.obj,p.obj,conjugate,pivType)
      else: raise Exception('Unsupported datatype')
      return dSub, p
  else: raise Exception('Unsupported matrix type')

lib.ElInertiaAfterLDL_s.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDL_s.restype = c_uint
lib.ElInertiaAfterLDL_d.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDL_d.restype = c_uint
lib.ElInertiaAfterLDL_c.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDL_c.restype = c_uint
lib.ElInertiaAfterLDL_z.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDL_z.restype = c_uint
lib.ElInertiaAfterLDLDist_s.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDLDist_s.restype = c_uint
lib.ElInertiaAfterLDLDist_d.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDLDist_d.restype = c_uint
lib.ElInertiaAfterLDLDist_c.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDLDist_c.restype = c_uint
lib.ElInertiaAfterLDLDist_z.argtypes = [c_void_p,c_void_p,POINTER(InertiaType)]
lib.ElInertiaAfterLDLDist_z.restype = c_uint
def InertiaAfterLDL(d,dSub):
  inertia = InertiaType()
  if type(d) is not type(dSub):
    raise Exception('Types of d and dSub must match')
  if d.tag != Base(dSub.tag):
    raise Exception('Datatype of d must be the base of that of dSub')
  if type(d) is Matrix:
    if   dSub.tag == sTag: 
      lib.ElInertiaAfterLDL_s(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == dTag:
      lib.ElInertiaAfterLDL_d(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == cTag:
      lib.ElInertiaAfterLDL_c(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == zTag:
      lib.ElInertiaAfterLDL_z(d.obj,dSub.obj,pointer(inertia))
    else: raise Exception('Unsupported datatype')
  elif type(d) is DistMatrix:
    if   dSub.tag == sTag: 
      lib.ElInertiaAfterLDLDist_s(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == dTag:
      lib.ElInertiaAfterLDLDist_d(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == cTag:
      lib.ElInertiaAfterLDLDist_c(d.obj,dSub.obj,pointer(inertia))
    elif dSub.tag == zTag:
      lib.ElInertiaAfterLDLDist_z(d.obj,dSub.obj,pointer(inertia))
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
  return inertia

lib.ElSolveAfterLDL_s.argtypes = [c_void_p,c_void_p]
lib.ElSolveAfterLDL_s.restype = c_uint
lib.ElSolveAfterLDL_d.argtypes = [c_void_p,c_void_p]
lib.ElSolveAfterLDL_d.restype = c_uint
lib.ElSolveAfterLDL_c.argtypes = [c_void_p,c_void_p,bType]
lib.ElSolveAfterLDL_c.restype = c_uint
lib.ElSolveAfterLDL_z.argtypes = [c_void_p,c_void_p,bType]
lib.ElSolveAfterLDL_z.restype = c_uint
lib.ElSolveAfterLDLDist_s.argtypes = [c_void_p,c_void_p]
lib.ElSolveAfterLDLDist_s.restype = c_uint
lib.ElSolveAfterLDLDist_d.argtypes = [c_void_p,c_void_p]
lib.ElSolveAfterLDLDist_d.restype = c_uint
lib.ElSolveAfterLDLDist_c.argtypes = [c_void_p,c_void_p,bType]
lib.ElSolveAfterLDLDist_c.restype = c_uint
lib.ElSolveAfterLDLDist_z.argtypes = [c_void_p,c_void_p,bType]
lib.ElSolveAfterLDLDist_z.restype = c_uint
def SolveAfterLDL(A,B,conjugate=True):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLDL_s(A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLDL_d(A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterLDL_c(A.obj,B.obj,conjugate)
    elif A.tag == zTag: lib.ElSolveAfterLDL_z(A.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterLDLDist_s(A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLDLDist_d(A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterLDLDist_c(A.obj,B.obj,conjugate)
    elif A.tag == zTag: lib.ElSolveAfterLDLDist_z(A.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

def SolveAfterLDLPiv(A,dSub,p,B,conjugate=True):
  if type(A) is not type(dSub) or type(dSub) is not type(p) or \
     type(p) is not type(B):
    raise Exception('Types of {A,dSub,p,B} must match')
  if A.tag != dSub.tag or dSub.tag != B.tag:
    raise Exception('Datatypes of {A,dSub,B} must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLDLPiv_s(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLDLPiv_d(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterLDLPiv_c(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    elif A.tag == zTag:
      lib.ElSolveAfterLDLPiv_z(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterLDLPivDist_s(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLDLPivDist_d(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterLDLPivDist_c(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    elif A.tag == zTag:
      lib.ElSolveAfterLDLPivDist_z(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported datatype')

lib.ElMultiplyAfterLDL_s.argtypes = [c_void_p,c_void_p]
lib.ElMultiplyAfterLDL_s.restype = c_uint
lib.ElMultiplyAfterLDL_d.argtypes = [c_void_p,c_void_p]
lib.ElMultiplyAfterLDL_d.restype = c_uint
lib.ElMultiplyAfterLDL_c.argtypes = [c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDL_c.restype = c_uint
lib.ElMultiplyAfterLDL_z.argtypes = [c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDL_z.restype = c_uint
lib.ElMultiplyAfterLDLDist_s.argtypes = [c_void_p,c_void_p]
lib.ElMultiplyAfterLDLDist_s.restype = c_uint
lib.ElMultiplyAfterLDLDist_d.argtypes = [c_void_p,c_void_p]
lib.ElMultiplyAfterLDLDist_d.restype = c_uint
lib.ElMultiplyAfterLDLDist_c.argtypes = [c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLDist_c.restype = c_uint
lib.ElMultiplyAfterLDLDist_z.argtypes = [c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLDist_z.restype = c_uint
def MultiplyAfterLDL(A,B,conjugate=True):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElMultiplyAfterLDL_s(A.obj,B.obj)
    elif A.tag == dTag: lib.ElMultiplyAfterLDL_d(A.obj,B.obj)
    elif A.tag == cTag: lib.ElMultiplyAfterLDL_c(A.obj,B.obj,conjugate)
    elif A.tag == zTag: lib.ElMultiplyAfterLDL_z(A.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElMultiplyAfterLDLDist_s(A.obj,B.obj)
    elif A.tag == dTag: lib.ElMultiplyAfterLDLDist_d(A.obj,B.obj)
    elif A.tag == cTag: lib.ElMultiplyAfterLDLDist_c(A.obj,B.obj,conjugate)
    elif A.tag == zTag: lib.ElMultiplyAfterLDLDist_z(A.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
